# geodesic

./: CMakeLists.txt
python/: setup.py
python/geodesic/: __init__.pyx  geodesic_algorithm_base.pxd  geodesic_algorithm_base.pyx  geodesic_algorithm_dijkstra.pxd  geodesic_algorithm_dijkstra.pyx  geodesic_algorithm_exact.pxd  geodesic_algorithm_exact.pyx  geodesic_algorithm_subdivision.pxd  geodesic_algorithm_subdivision.pyx  geodesic_mesh.pxd  geodesic_mesh.pyx  geodesic_mesh_elements.pxd
